# appstream-glib

./: configure.ac  meson.build
client/: meson.build
data/: meson.build
data/installed-tests/: meson.build
data/tests/: meson.build
docs/api/: appstream-glib-docs.sgml
libappstream-builder/: meson.build
libappstream-builder/plugins/: meson.build
libappstream-glib/: Makefile.am  appstream-glib.h  as-app-ref.c  as-app-ref.h  as-app.c  as-app.h  as-monitor.c  as-node.c  as-ref-string.c  as-self-test.c  as-store.c  as-store.h  as-suggest-private.h  as-suggest.c  as-suggest.h  as-tag.c  as-tag.gperf  as-tag.h  as-utils.c  as-utils.h  meson.build
